Sort the output